objects/LLC_BI__Document_Store__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__External_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is not required but is generally automatically populated when used. This field stores the identifier of an external document in the external repository. It can specify the URL or some other type of key.</description>
        <externalId>true</externalId>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_External__c</fullName>
        <description>This field is optional and auto-populates. This field indicates that the file associated with this document store is not stored in Salesforce and is stored in an external system.</description>
        <formula>AND(IF(ISPICKVAL(LLC_BI__Type__c, &apos;Salesforce Attachment&apos;),false,true),NOT(ISPICKVAL(LLC_BI__Type__c, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Internal__c</fullName>
        <description>This field is optional and auto-populates. This field indicates that the file associated with this document store is stored in Salesforce.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Salesforce Attachment&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Non_Unique_External_Identifier__c</fullName>
        <description>This field is not required but is generally automatically populated when used. This field stores the identifier of an external document in the external repository. It can specify the URL or some other type of key.</description>
        <externalId>true</externalId>
        <label>Non Unique External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offline_Location__c</fullName>
        <description>This field is not required and used in classic Document Manager. It is a text field where additional information about the storage location can be provided.</description>
        <label>Offline Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ready_For_Esignature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This field indicates that a file is E-Signature ready.</description>
        <label>E-Signature Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is not required but is automatically populated when used. Provides the storage type/vendor of off line documents.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Attachment</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NDOC__Filenet_Document_Id__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Filenet Document Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and auto-populates. This field indicates that the file associated with this document store has been permanently deleted.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Store</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LLC_BI__Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS-{0000000000}</displayFormat>
        <label>Document Store Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>LLC_BI__Enhanced_DocMan_Sharing__c</fullName>
        <label>Enhanced DocMan Sharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>NDOC__Enhanced_DocMan_Sharing__c</fullName>
        <label>Enhanced DocMan Sharing</label>
    </sharingReasons>
</CustomObject>